# models

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyrightconfig.json
.github/instructions/: root.instructions.md
.github/workflows/: build-paper.yml  papers.yml  pr.yml
models/column-matcher/docs/: PROBLEM.md
models/column-matcher/tests/: conftest.py  test_example.py
models/damicore-clusterizer/: pyproject.toml
models/damicore-clusterizer/tests/: conftest.py  test_example.py
models/damicore-distance/: Makefile  pyproject.toml
models/damicore-distance/tests/: conftest.py  test_example.py
models/damicore-normalizer/: pyproject.toml
models/damicore-normalizer/tests/: conftest.py  test_example.py
models/damicore-tree-builder/: pyproject.toml
models/damicore-tree-builder/src/damicore_tree_builder/: tarefa.md
models/damicore-tree-builder/tests/: conftest.py  test_example.py
models/entity-resolution/: pyproject.toml
models/fixtures/dataset-seade-pop-age/normalizer-output-cod_distr/: 80001.txt  80002.txt  80003.txt  80004.txt  80005.txt  80006.txt  80007.txt
models/multimap-map-selector/: pyproject.toml
models/multimap-map-selector/tests/: conftest.py  test_example.py
