[project]
name = "multimap-map-selector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.9", "pyright>=1.1", "pytest>=8", "pytest-cov>=6"]

[tool.ruff]
line-length = 88
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
venvPath = "."
venv = ".venv"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["unit: fast isolated unit tests"]
